# BNO055-IMU-Refactorings

./: README.md
BNO055_Refactor_project/: CMakeLists.txt
BNO055_Refactor_project/new_driver_src/: BitUtils.h  Bno055_Driver.cpp  Bno055_Driver.h  Bno055_I2C_Interface.h  Bno055_I2C_Mock_Interface.cpp  Bno055_I2C_Mock_Interface.h  New_Test_Main.cpp
BNO055_Refactor_project/src/: Test_main.c
BNO055_Refactor_project/tests/: BitUtils_Tests.cpp
Project/: CMakeLists.txt  Reference data from test stubs.txt
Project/new_driver_src/: Bno055.cpp  Bno055.h  Bno055_Driver.cpp  Bno055_Driver.h  Bno055_I2C_Interface.cpp  Bno055_I2C_Interface.h  Bno055_MockUp.cpp  Bno055_MockUp.h  New_Test_Main.cpp
Project/src/: Test_main.c
